--- a/package.json
+++ b/package.json
@@ -2,18 +2,20 @@
   "name": "vc-sumarry-bot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "bin/index.js",
   "scripts": {
-    "start": "node bin/index"
+    "start": "babel-node ."
   },
   "author": "takahito hashimoto",
   "license": "ISC",
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.3.13",
     "cheerio": "^1.0.0-rc.2",
     "cron": "^1.3.0",
     "express": "^4.16.3",
     "moment": "^2.22.2",
-    "request": "^2.87.0",
+    "request-promise": "^4.2.2",
     "twit": "^2.2.11"
   }
 }
