--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
   "author": "takahito hashimoto",
   "license": "ISC",
   "dependencies": {
+    "@line/bot-sdk": "^6.7.1",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.3.13",
     "cheerio": "^1.0.0-rc.2",
     "cron": "^1.3.0",
+    "dotenv": "^8.0.0",
     "express": "^4.16.3",
+    "log4js": "^4.3.0",
     "moment": "^2.22.2",
     "request-promise": "^4.2.2",
     "twit": "^2.2.11"
+  },
+  "devDependencies": {
+    "eslint": "^5.16.0"
   }
 }
