--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
   "name": "vc-sumarry-bot",
   "version": "1.0.0",
-  "description": "",
-  "main": "bin/index.js",
   "scripts": {
-    "start": "babel-node ."
+    "start": "node dist/bundle.js",
+    "start:dev": "node_modules/.bin/ts-node app/index.ts",
+    "build": "node_modules/.bin/webpack --config webpack.config.js",
+    "lint": "",
+    "lint:fix": ""
   },
   "author": "takahito hashimoto",
-  "license": "ISC",
   "dependencies": {
     "@line/bot-sdk": "^6.7.1",
-    "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.3.13",
     "cheerio": "^1.0.0-rc.2",
     "cron": "^1.3.0",
     "dotenv": "^8.0.0",
@@ -19,9 +18,30 @@
     "log4js": "^4.3.0",
     "moment": "^2.22.2",
     "request-promise": "^4.2.2",
-    "twit": "^2.2.11"
+    "ts-loader": "^6.0.2",
+    "twit": "^2.2.11",
+    "typescript": "^3.5.1",
+    "webpack": "^4.33.0",
+    "webpack-node-externals": "^1.7.2"
   },
   "devDependencies": {
-    "eslint": "^5.16.0"
+    "@types/express": "^4.17.0",
+    "@typescript-eslint/eslint-plugin": "^1.9.0",
+    "@typescript-eslint/parser": "^1.9.0",
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^4.3.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "prettier": "^1.18.2",
+    "ts-node": "^8.2.0",
+    "webpack-cli": "^3.3.3"
+  },
+  "engines": {
+    "node": "11.8.0",
+    "npm": "6.9.0"
   }
 }
