--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "node dist/bundle.js",
-    "start:dev": "node_modules/.bin/ts-node app/index.ts",
+    "start:dev": "node_modules/.bin/nodemon",
     "build": "node_modules/.bin/webpack --config webpack.config.js",
     "lint": "",
     "lint:fix": ""
@@ -11,12 +11,17 @@
   "author": "takahito hashimoto",
   "dependencies": {
     "@line/bot-sdk": "^6.7.1",
+    "@types/cheerio": "^0.22.11",
+    "@types/cron": "^1.7.1",
+    "@types/request-promise": "^4.1.44",
+    "@types/twit": "^2.2.22",
     "cheerio": "^1.0.0-rc.2",
     "cron": "^1.3.0",
     "dotenv": "^8.0.0",
     "express": "^4.16.3",
     "log4js": "^4.3.0",
     "moment": "^2.22.2",
+    "nodemon": "^1.19.1",
     "request-promise": "^4.2.2",
     "ts-loader": "^6.0.2",
     "twit": "^2.2.11",
